--- a/.babelrc
+++ b/.babelrc
@@ -35,7 +35,7 @@
         ]
       ],
       "presets": [
-        "es2015",
+        "es2015-rollup",
         "react",
         "stage-0"
       ]
